--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-# This is the second condings that I build
+// This is the second condings that I build
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <head>
   <title>Halo dari GitHub</title>
+      <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Kukruw.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
   <h1>Ini ditulis langsung di GitHub!</h1>
