--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>Ini ditulis langsung di GitHub!</h1>
+  <div class="header">
+  <div class="containder">
+    <div class="navbar">
+      <div>
+        <img scr="Logo.png" alt="Pic Here" height="70">
+      </div>
+      <nav>
+        <ul>
+          <li><a href="" class="btn">Home</a></li>
+          <li><a href="" class="btn">Product</a></li>
+          <li><a href="" class="btn">About</a></li>
+          <li><a href="" class="btn">Contact</a></li>
+          <li><a href="" class="btn">Account</a></li>
+        </ul>
+      </nav>
+      <img scr="A.png" alt="Pic Here" height="20ptx" widht="30ptx">
+      <img scr="B.png" alt="Pic Here" height="30ptx" widht="30ptx">
+  <h1>For Freedom of Hearth</h1>
 </body>
 </html>
